[project]
name = "social-media-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloakbrowser>=0.3.31",
    "duckdb>=1.5.3",
    "flask>=3.1.3",
    "jupyterlab>=4.5.8",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "textual>=8.2.7",
    "typer>=0.26.7",
]
